# UAVSAR

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: drone_list.json
src-tauri/src/: flight_path.rs  lib.rs  main.rs  writer.rs
src/lib/common/: common.ts
src/lib/components/: Map.svelte  Sidebar.svelte
src/lib/stores/: droneTypes.ts  stores.ts
src/routes/: +layout.ts  +page.svelte
