[package]
name = "uavsar"
version = "0.1.0"
description = "A Tauri App"
authors = ["Sam Willems"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uavsar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1"
geo = "0.30.0"
proj = "0.27"
image = "0.25.6"
kml = "0.9.1"
chrono = "0.4.41"
gdal = { version = "0.18.0", features = ["bindgen"] }
zip = "4.3.0"
quick-xml = "0.38.1"

